# WebMonitor

./: .gitignore  ABOUTME.md  AI_NOTES.md  DEPLOYMENT.md  Dockerfile  PROMPTS_USED.md  README.md  docker-compose.yml
Backend/: Dockerfile  README.md  db.py  fetcher.py  llm.py  main.py  models.py  pyproject.toml  requirements.txt
Frontend/: Dockerfile  README.md  package-lock.json
Frontend/src/: App.jsx  api.js  main.jsx  styles.css
Frontend/src/components/: AddLinkForm.jsx  DiffViewer.jsx  HistoryView.jsx  LinkCard.jsx  LinkList.jsx  MonitoringDashboard.jsx  Navbar.jsx  SummaryBox.jsx
Frontend/src/pages/: Home.jsx  Status.jsx
nginx/: default.conf
